@@ -21,72 +21,75 @@ import java.util.stream.Collectors;
 @Service
 @RequiredArgsConstructor
 public class BasicMessageService implements MessageService {
-    private final MessageRepository messageRepository;
-    private final ChannelRepository channelRepository;
-    private final BinaryContentRepository binaryContentRepository;
-    private final UserRepository userRepository;
 
-    @Override
-    public Message createMessage(MessageCreateDto messageCreateDto, List<BinaryContentCreateDto> binaryContentCreateDtos) {
-        UUID channelId = messageCreateDto.channelId();
-        UUID authorId = messageCreateDto.authorId();
+  private final MessageRepository messageRepository;
+  private final ChannelRepository channelRepository;
+  private final BinaryContentRepository binaryContentRepository;
+  private final UserRepository userRepository;
 
-        if (!channelRepository.existsById(channelId)) {
-            throw new NoSuchElementException("Channel with id " + channelId + " does not exist");
-        }
-        if (!userRepository.existsById(authorId)) {
-            throw new NoSuchElementException("Author with id " + authorId + " does not exist");
-        }
+  @Override
+  public Message createMessage(MessageCreateDto messageCreateDto,
+      List<BinaryContentCreateDto> binaryContentCreateDtos) {
+    UUID channelId = messageCreateDto.channelId();
+    UUID authorId = messageCreateDto.authorId();
 
-        List<UUID> attachmentIds = binaryContentCreateDtos.stream()
-                .map(attachmentRequest -> {
-                    String fileName = attachmentRequest.fileName();
-                    String contentType = attachmentRequest.contentType();
-                    byte[] bytes = attachmentRequest.bytes();
-
-                    BinaryContent binaryContent = new BinaryContent(fileName, (long) bytes.length, contentType, bytes);
-                    BinaryContent createdBinaryContent = binaryContentRepository.save(binaryContent);
-                    return createdBinaryContent.getId();
-                })
-                .toList();
-
-        String content = messageCreateDto.content();
-        Message message = new Message(content, channelId,authorId, attachmentIds);
-        return messageRepository.save(message);
+    if (!channelRepository.existsById(channelId)) {
+      throw new NoSuchElementException("Channel with id " + channelId + " does not exist");
+    }
+    if (!userRepository.existsById(authorId)) {
+      throw new NoSuchElementException("Author with id " + authorId + " does not exist");
     }
 
-    @Override
-    public Message findById(UUID messageId) {
-        return messageRepository.findById(messageId)
-                .orElseThrow(() -> new NoSuchElementException(messageId + "르 찾을 수 없습니다."));
-    }
+    List<UUID> attachmentIds = binaryContentCreateDtos.stream()
+        .map(attachmentRequest -> {
+          String fileName = attachmentRequest.fileName();
+          String contentType = attachmentRequest.contentType();
+          byte[] bytes = attachmentRequest.bytes();
 
-    @Override
-    public List<Message> findAllByChannelId(UUID channelId) {
-        return messageRepository.findAllByChannelId(channelId).stream().collect(Collectors.toList());
-    }
+          BinaryContent binaryContent = new BinaryContent(fileName, (long) bytes.length,
+              contentType, bytes);
+          BinaryContent createdBinaryContent = binaryContentRepository.save(binaryContent);
+          return createdBinaryContent.getId();
+        })
+        .toList();
 
-    @Override
-    public Message update(UUID messageId, MessageUpdateDto messageUpdateDto) {
-        String newContent = messageUpdateDto.newContent();
-        Message message = messageRepository.findById(messageId)
-                .orElseThrow(() -> new NoSuchElementException( messageId + " 를 찾을 수 없습니다."));
-        message.update(newContent);
-        return messageRepository.save(message);
-    }
+    String content = messageCreateDto.content();
+    Message message = new Message(content, channelId, authorId, attachmentIds);
+    return messageRepository.save(message);
+  }
 
-    @Override
-    public void delete(UUID messageId) {
-        Message message = messageRepository.findById(messageId)
-                .orElseThrow(() -> new NoSuchElementException(messageId + "를 찾을 수 없습니다."));
-        message.getAttachmentIds()
-                .forEach(binaryContentRepository::deleteById);
+  @Override
+  public Message findById(UUID messageId) {
+    return messageRepository.findById(messageId)
+        .orElseThrow(() -> new NoSuchElementException(messageId + "르 찾을 수 없습니다."));
+  }
 
-        messageRepository.deleteById(messageId);
-    }
+  @Override
+  public List<Message> findAllByChannelId(UUID channelId) {
+    return messageRepository.findAllByChannelId(channelId).stream().collect(Collectors.toList());
+  }
 
-    @Override
-    public void deleteInChannel(UUID channelId) {
-        messageRepository.deleteAllByChannelId(channelId);
-    }
+  @Override
+  public Message update(UUID messageId, MessageUpdateDto messageUpdateDto) {
+    String newContent = messageUpdateDto.content();
+    Message message = messageRepository.findById(messageId)
+        .orElseThrow(() -> new NoSuchElementException(messageId + " 를 찾을 수 없습니다."));
+    message.update(newContent);
+    return messageRepository.save(message);
+  }
+
+  @Override
+  public void delete(UUID messageId) {
+    Message message = messageRepository.findById(messageId)
+        .orElseThrow(() -> new NoSuchElementException(messageId + "를 찾을 수 없습니다."));
+    message.getAttachmentIds()
+        .forEach(binaryContentRepository::deleteById);
+
+    messageRepository.deleteById(messageId);
+  }
+
+  @Override
+  public void deleteInChannel(UUID channelId) {
+    messageRepository.deleteAllByChannelId(channelId);
+  }
 }
